--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Vanessa Muratore",
   "license": "MIT",
   "scripts": {
-    "build": "webpack --mode development",
+    "build:dev": "webpack --mode development",
+    "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server --mode development",
     "test": "jest"
   },
@@ -18,6 +19,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.7.1",
     "jest": "^29.3.1",
+    "mini-css-extract-plugin": "^2.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-addons-shallow-compare": "^15.6.3",
@@ -38,8 +40,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
     "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "jest-environment-jsdom": "^29.3.1",
     "webpack-cli": "^4.10.0"
