--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.7.1",
+    "express": "^4.18.2",
     "jest": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.0",
     "normalize.css": "^8.0.1",
