--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:dev": "webpack --mode development",
     "build:prod": "webpack --mode production --env production",
     "dev-server": "webpack-dev-server --mode development",
-    "test": "jest"
+    "test": "jest",
+    "start": "node server/server.js"
   },
   "dependencies": {
     "@babel/core": "^7.19.6",
@@ -19,7 +20,6 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.7.1",
     "express": "^4.18.2",
-    "jest": "^29.3.1",
     "mini-css-extract-plugin": "^2.7.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
@@ -30,21 +30,23 @@
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
-    "react-test-renderer": "^18.2.0",
     "redux": "^4.2.0",
     "sass": "^1.56.1",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "uuid": "^9.0.0",
     "validator": "^13.7.0",
-    "webpack": "^5.74.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack": "^5.74.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "chalk": "^5.1.2",
+    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "webpack-cli": "^4.10.0"
+    "react-test-renderer": "^18.2.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
