--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.18.2",
     "mini-css-extract-plugin": "^2.7.0",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "react": "^18.2.0",
     "react-addons-shallow-compare": "^15.6.3",
     "react-datepicker": "^4.8.0",
