--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "license": "MIT",
   "scripts": {
     "build:dev": "webpack --mode development",
-    "build:prod": "webpack --mode production --env production",
+    "build:prod": "webpack --mode production",
     "dev-server": "webpack-dev-server --mode development",
-    "test": "jest",
+    "test": "cross-env NODE_ENV=development jest",
     "start": "node server/server.js"
   },
   "dependencies": {
@@ -20,6 +20,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "css-loader": "^6.7.1",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "mini-css-extract-plugin": "^2.7.0",
     "normalize.css": "^8.0.1",
     "numeral": "^2.0.6",
@@ -32,6 +33,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.2",
     "sass": "^1.56.1",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
@@ -44,9 +46,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "chalk": "^5.1.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "react-test-renderer": "^18.2.0",
+    "redux-mock-store": "^1.5.4",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
   }
