--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "^8.2.5",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^6.7.1",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
